# master-thesis

./: .clang-format  .gitignore  .travis.yml  01-gaussian-framework.html  02-information-trajectories.html  Analyze.ipynb  Block.cpp  Block.hh  CMakeLists.txt  Cargo.toml  Gillespie.h  Gillespie.hh  Gillespie.inp  Histogram.ipynb  LICENSE  MI_Errors.ipynb  Makefile  Makefile.alpha  Makefile.i386  Makefile.i386-linux  Makefile.iris4d  Makefile.powerpc  Makefile.rs6000  Numerical.ipynb  Reaction.hh  Readme.md  Run.cpp  Run.hh  Simulation.cpp  Simulation.hh  Trajectory.cpp  Trajectory.hh  Untitled.ipynb  Untitled1.ipynb  acknowledgements.html  acknowledgments.html  ana.perl  analyse.c  analyse.cpp  analyzer.py  (+50 more)
.cargo/: config
CPP/: CMakeLists.txt  Reaction.cpp  Simulation.cpp  Trajectory.cpp  Trajectory.hh  main.cpp
CPP/numtools/: CMakeLists.txt  vectools.c
analyzer/: .gitignore  Analyze.ipynb  Numerical.ipynb  Readme.md  analyzer.py  assembly.ipynb  compare_likelihoods.ipynb  configuration.py  configuration.toml  matplotlibrc  mutual_information.ipynb  mutual_information.py  ornstein_uhlenbeck.py  settings.py  settings_default.py  stochastic_sim.py
analyzer/analyzer/: analyzer.py  ornstein_uhlenbeck.py  stochastic_sim.py
analyzer/benchmarks/: propensities.py
analyzer/docs/: mutual_information.md
analyzer/tests/: analyzer_test.py  test_analyzer.py  test_stochastic_sim.py
benches/: simulate.rs
benchmarks/: propensities.py
docs/: .gitignore  01-gaussian-framework.md  01-information-and-noise.md  02-information-trajectories.md  02-stochastic-trajectories.md  03-gaussian-framework.md  03-wandau-lang.md  03-wang-landau.md  04-thermodynamic-inspiration.md  build-book.py  elsevier-with-titles.csl  gasper_notes.md  gaussian-framework.md  gaussian_project.md  index.md  latex_styles.lua  library.bib  mutual_information.html  mutual_information.md  styling.css  template.latex
docs/theme/: header.html.jinja  index.html.jinja
gillespie/: configuration.py  gaussian_approx.py  gillespie.html  gillespie.pyx  kernel_density_estimate.py  likelihood.py  ornstein_uhlenbeck.py  simulate.py  stochastic_sim.py  trajectory_array.py
notebooks/: Analyze.ipynb  MI_Errors.ipynb  Numerical.ipynb  Untitled.ipynb  Untitled1.ipynb  analyze_run.ipynb  compare_estimates.ipynb  gaussian-project.ipynb  hybrid.ipynb  marginal_pdf.ipynb  mc_gaussian.ipynb  mutual_information.ipynb  path_sampling.ipynb  replica.ipynb
numtools/: bittools.c  numtools.c  numtools.h  t.c  vectools.h
plots/correlation_matrices/: plot.py
python/: Readme.md
python/gaussian_system/: __init__.py  correlation_funcs.py  monte_carlo.py  replica.py  system.py  thermodynamic_integration.py  wang_landau.py
runs/: 0.txt  Analyze.ipynb  Gillespie.inp  test.components  test.reactions  test.txt  tr2.txt  trajectory.txt
runs/response/: ouproc.txt  (+4 more)
src/: configuration.rs  gillespie.rs  lib.rs  likelihood.rs  main.rs
tests/: test_kernel_density_estimate.py  test_likelihood.py  test_simulate.py  test_stochastic_sim.py
(+3 files in other folders)
