[package]
name = "accelerate"
version = "0.1.0"
authors = ["Manuel Reinhardt <M.Reinhardt@amolf.nl>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.13"
ndarray-npy = "0.5.0"
rayon = "1.3"
rand_chacha = "0.2.1"
arrayvec = "0.5"
jemallocator = "0.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"